version/0.12/_sources/api/solver/_autosummary/settings/reference_values.rst.txt
:orphan:

.. _reference_values:

reference_values
================

.. currentmodule:: ansys.fluent.core.solver.settings_231.reference_values

.. autoclass:: reference_values
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

==================================   ==================================================================

Child                                                                                           Summary

==================================   ==================================================================
:ref:`area <area>`                                                Set reference area for normalization.

:ref:`depth <depth>`                                        Set reference depth for volume calculation.

:ref:`density <density_6>`                                     Set reference density for normalization.

:ref:`enthalpy <enthalpy>`               Set reference enthalpy for enthalpy damping and normalization.

:ref:`length <length>`                                          Set reference length for normalization.

:ref:`pressure <pressure>`                                    Set reference pressure for normalization.

:ref:`temperature <temperature_3>`                         Set reference temperature for normalization.

:ref:`yplus <yplus>`                                             Set reference yplus for normalization.

:ref:`velocity <velocity_2>`                                  Set reference velocity for normalization.

:ref:`viscosity <viscosity_3>`                               Set reference viscosity for normalization.

:ref:`zone <zone>`                                                                  Set reference zone.

==================================   ==================================================================

.. rubric:: Commands

==========================   =======================

Command                                      Summary

==========================   =======================
:ref:`compute <compute>`          'compute' command.

:ref:`list_val <list_val>`       'list_val' command.

==========================   =======================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

