version/0.23/_sources/api/solver/_autosummary/settings/reference_values.rst.txt
:orphan:

.. _reference_values:

reference_values
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.reference_values.reference_values
    :show-inheritance:

.. rubric:: Attributes

========================================================   ==================================================================

Attribute                                                                                                             Summary

========================================================   ==================================================================
:ref:`area <area_1>`                                                                    Set reference area for normalization.

:ref:`depth <depth>`                                                              Set reference depth for volume calculation.

:ref:`density <density_6>`                                                           Set reference density for normalization.

:ref:`enthalpy <enthalpy>`                                     Set reference enthalpy for enthalpy damping and normalization.

:ref:`length <length_1>`                                                              Set reference length for normalization.

:ref:`pressure <pressure>`                                                          Set reference pressure for normalization.

:ref:`temperature <temperature_4>`                                               Set reference temperature for normalization.

:ref:`yplus <yplus>`                                                                   Set reference yplus for normalization.

:ref:`velocity <velocity_2>`                                                        Set reference velocity for normalization.

:ref:`viscosity <viscosity_3>`                                                     Set reference viscosity for normalization.

:ref:`ratio_of_specific_heats <ratio_of_specific_heats>`                                         Set ratio of specific heats.

:ref:`zone <zone>`                                                                                        Set reference zone.

========================================================   ==================================================================

.. rubric:: Methods

================================   ==========================

Method                                                Summary

================================   ==========================
:ref:`compute <compute>`                   'compute' command.

:ref:`list_values <list_values>`       'list_values' command.

================================   ==========================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

